# parallel-critical-collapse

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: simulation.json  simulation_3-1D.json  simulation_4D copy.json  simulation_4D.json  simulation_4D_1024.json  simulation_4D_128.json  simulation_4D_2048.json  simulation_4D_256.json  simulation_4D_512.json  simulation_5D.json  simulation_config.json  simulation_config_test.json
include/: InitialConditionGenerator.hpp  NewtonSolver.hpp  ODEStepper.hpp  OutputWriter.hpp  ShootingSolver.hpp  SimulationConfig.hpp  SpectralTransformer.hpp  common.hpp
scripts/: create_simulation_data.py  plot_simulation_results.py
src/: InitialConditionGenerator.cpp  NewtonSolver.cpp  ODEStepper.cpp  OutputWriter.cpp  ShootingSolver.cpp  SpectralTransformer.cpp  common.cpp  main.cpp
test/: CMakeLists.txt  test_fft.cpp  test_init_gen.cpp  test_lapack.cpp
